# BuddySystem

./: CMakeLists.txt  README.md  appveyor.yml
BuddySystem/: CMakeLists.txt
BuddySystem/Source/Private/: BuddySystem.cpp  Main.cpp
BuddySystem/Source/Public/: BuddySystem.h
UnitTest/: CMakeLists.txt
UnitTest/Source/Private/: Main.cpp
